--- a/src/features/calendar/components/CalendarHeader.module.css
+++ b/src/features/calendar/components/CalendarHeader.module.css
@@ -6,7 +6,7 @@
   display: grid;
   grid-template-columns: 277px auto auto 1fr auto;
   align-items: center;
-  padding: 18px 36px 18px 0;
+  padding: 18px 16px 18px 0;
   background: var(--canvas);
   position: relative;
   z-index: 100;
